front_end/style.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    font-family: Arial, Helvetica, sans-serif;
    background: linear-gradient(304deg,#4eae3d,#f9befb,#cffda8);
    background-size: 240% 240%;
    animation: gradient-animation 16s ease infinite;
    margin: 0;
    overflow: hidden;
    position: relative;
}

@keyframes gradient-animation {
    0% {
      background-position: 0% 50%;
    }
    50% {
      background-position: 100% 50%;
    }
    100% {
      background-position: 0% 50%;
    }
}

.background-icons {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    pointer-events: none;
}

.moving-icon {
    position: absolute;
    font-size: 50px;
    color: #333;
    animation: moveIcon 10s linear infinite;
}

@keyframes moveIcon {
    0% {
        transform: translate(-10%, -10%);
        opacity: 0;
    }
    100% {
        transform: translate(110%, 110%);
        opacity: 1;
    }
}

.chatbot-container {
    flex: 1;
    width: 500px;
    margin: 0 auto;
    background-color: rgba(255, 255, 255, 0.5);
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    margin-left: 300px;
}

#chatbot {
    background-color: none;
    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
    border-radius: 5px;
}
  
#header {
    background-color: darkslategrey;
    color: #ffffff;
    padding: 10px;
    font-size: 1em;
    font-weight: bold;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
}

#menu {
    left: 150px;
    position: relative;
}

#bot {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 30px;
    margin-right: 12px;
}

message-container {
    background: none;
    width: 100%;
    display: flex;
    align-items: center;
    border-radius: 15px;
  }
  
  
#conversation {
    height: 500px;
    overflow-y: auto;
    padding: 20px;
    display: flex;
    flex-direction: column;
    max-width: 470px;
}

@keyframes message-fade-in {
    from {
        opacity: 0;
        transform: translateY(-20px);
    }
    to {
        opacity: 1;
        transform: translateY(0);
    }
}
  
.chatbot-message {
    display: flex;
    align-items: flex-start;
    position: relative;
    font-size: 14px;
    line-height: 20px;
    border-radius: 20px;
    word-wrap: break-word;
    white-space: pre-wrap;
    max-width: 100%;
    padding: 0 15px;
  }

.user-message {
    justify-content: flex-end;
}


.chatbot-text {
    background-color: white;
    color: #333333;
    font-size: 1.1em;
    padding: 15px;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}
  
#input-form {
    display: flex;
    align-items: center;
}
  
#input-field {
    flex: 1;
    height: 60px;
    border-radius: 5px;
    margin-left: 30px;
    padding: 0 10px;
    font-size: 14px;
    background: #ffffff;
    color: #333333;
    border: none;
    margin-bottom: 10px;
}

.send-icon {
    margin-right: 40px;
    cursor: pointer;
}
  
#input-field:focus {
    border-color: #333333;
    outline: none;
}
  
#submit-button {
    background-color: transparent;
    border: none;
    font-size: 25px;
    margin-left: 15px;
    margin-right: 15px;
    margin-bottom: 10px;
    color: darkslategrey;
}

p[sentTime]:hover::after {    
    content: attr(sentTime);
    position: absolute;
    top: -3px;
    font-size: 14px;
    color: gray;
}

.chatbot p[sentTime]:hover::after {  
    left: 15px;
}

.user-message p[sentTime]:hover::after {  
    right: 15px;
}

  /* width */
::-webkit-scrollbar {
    width: 5px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    background: #f1f1f1; 
  }
   
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #888; 
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #555; 
}

/* Main Container Styles */
.main-container {
    display: flex;
    justify-content: center; /* Center horizontally */
    align-items: center; /* Align to the top */
    height: 100vh; /* Set the height to 100% of the viewport height */
}

/* Side Panel Styles */
.side-panel {
    width: 270px;
    background-color: rgba(47, 79, 79, 0.75);
    padding: 20px;
    height: 100vh;
    position: fixed;
    left: 0;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.user-profile {
    color: #f0f0f0;
}

.user-profile i {
    font-size: 100px;
    margin-top: 20px;
}
.user-profile h3 {
    margin-left: 20px;
}

.saved-chats {
    color: #f0f0f0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.premium p{
    background-color: #383838;
    color: #fffb00;
    width: 250px;
    height: 50px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 50px;
    position: absolute;
    bottom: 80px;
    left: 20px;
}

.premium a{
    color: #f0f0f0;
    margin-left: 5px;
}

.sign-out{
    background-color: #383838;
    color: #f0f0f0;
    width: 250px;
    height: 50px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 50px;
    position: absolute;
    bottom: 15px;
    left: 20px;
}

.sign-out a {
    color: #f0f0f0;
    margin-left: 5px;
}

/* Dropdown Menu Styles */
.dropdown {
    position: relative;
    display: inline-block;
}

.menu-icon {
    cursor: pointer;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    border-radius: 5px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
}

.dropdown-content a {
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    color: #333;
    border-radius: 5px;
}

.dropdown-content i {
    margin-right: 12px;
    font-size: 20px;
}

.dropdown-content a:hover {
    background-color: #ddd;
}

/* Show the dropdown content when the dropdown is hovered or focused */
.dropdown:hover .dropdown-content, .dropdown:focus .dropdown-content {
    display: block;
}

